update cinema homepage

--- a/src/modules/Auth/pages/Signin/styles.module.scss
+++ b/src/modules/Auth/pages/Signin/styles.module.scss
@@ -1,5 +1,5 @@
-.body {
-  background-color: #fb4126;
+body {
+  background-image: url(../../../../../public/backgroundSign.jpg);
 }
 
 .container {
@@ -12,7 +12,6 @@
   width: 500px;
   background: white;
   border-radius: 5px;
-  background-image: url(../../../../../public/backgroundSign.jpg);
 
   .center {
     margin: 32px 0;
